--- a/index.html
+++ b/index.html
@@ -80,13 +80,9 @@
         />
         <div class="columns w-row">
           <div class="app__profile__userdata w-col w-col-6">
-            <h3 id="user-name" class="app__profile__name">Hokki Suwanda</h3>
-            <p id="user-role" class="app__profile__profession">
-              Software Engineer
-            </p>
-            <p id="user-location" class="app__profile__location">
-              Bandung, West Java, Indonesia · 467 connections
-            </p>
+            <h3 id="user-name" class="app__profile__name"></h3>
+            <p id="user-role" class="app__profile__profession"></p>
+            <p id="user-location" class="app__profile__location"></p>
           </div>
           <div class="app__profile__organizations w-col w-col-6">
             <a href="#" class="app__profile__company">GDP Labs</a
