remove console.logs and fix login interaction

--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
       crossorigin="anonymous"
     ></script>
     <script type="module" src="./login.js"></script>
-    <form id="login__form" action="#">
+    <form id="login__form" action="">
       <div>
         <label for="login__email">Email</label>
       </div>
